# http-base-uri-rs

./: Cargo.toml
src/: lib.rs
