[package]
name = "http-base-uri"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "HTTP/S base `http::Uri` subset for HTTP clients"
repository = "https://github.com/robo9k/http-base-uri-rs.git"
license = "MIT OR Apache-2.0"
keywords = ["URL"]
categories = [
    "web-programming",
    "config",
    "parser-implementations",
]
include = ["src/"]

[package.metadata.docs.rs]
targets = []
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "experimental" }

[features]
default = ["std"]
std = [
    "alloc",
    "http/std", # https://github.com/hyperium/http/issues/551
]
alloc = []

[dependencies]
http = { version = "1", default-features = false }
